Code review: SAK-13291 Place literals first / remove inefficient constructors
git-svn-id: https://source.sakaiproject.org/svn/authz/trunk@47516 66ffb92e-73f9-0310-93c1-f5514f145a0a